# testproject

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/: kmeans.py
tests/: test_kmeans.py
